# tap-narodnikatalog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tap-narodnikatalog.yml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
govdata/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
